# PyGmailOTP

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
config/: template_config.yaml  template_creds.json
pygmailotp/: PyGmailOTP.py
tests/: test.py
